# black-jack-emurgo

./: CHANGELOG.md  LICENSE  README.md  black-jack.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
